fix problem of jstree when modelset is swtiched.
https://github.com/xiaodongliang/bim360-mcapi-node-pdf.exporter.sample/issues/3

--- a/www/panelPage.html
+++ b/www/panelPage.html
@@ -8,7 +8,7 @@
       </div>
     </div> 
   </div>
-  <div class="row">
+  <div class="row" style="margin-bottom: 20px;">
     <div class="col">
        <div id="modelsetList">
           <div class="list-group"></div>
@@ -43,7 +43,7 @@
   </div> 
 
   <div class="row">
-    <div class="col" id="breakdownTree" style="height:500px;"> 
+    <div class="col" id="breakdownTree" style="height:450px;"> 
         <div id="clashviewSpinner" class="spinner-border" style="display:none;margin: auto"></div>  
     </div>
   </div>
